[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/Enemies/TheWitch/Spells/CactusAttack.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/CactusAttackStatic.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/CactusAttackGrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/CactusAttackSpin.png" type="Texture" id=4]
[ext_resource path="res://src/CollisionTemplates/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/CactusAttackCrash.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "Shatter",
"speed": 15.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "Grow",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Static",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Spin",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 15.6766, 31.8983 )

[node name="CactusAttack" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 16
collision_mask = 7
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32.5487 )
frames = SubResource( 16 )
animation = "Shatter"
frame = 2
playing = true

[node name="HitBox" parent="." instance=ExtResource( 5 )]
collision_layer = 16
collision_mask = 7

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -32.3478 )
shape = SubResource( 17 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[editable path="HitBox"]
